--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.4",
+    "date-fns": "^2.29.2",
+    "mongodb": "^4.9.1",
+    "nanoid": "^4.0.0",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.8"
