--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.4",
+    "bootstrap": "^5.2.0",
     "date-fns": "^2.29.2",
     "mongodb": "^4.9.1",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.8"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.3",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
