--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^5.2.4",
+    "@mantine/hooks": "^5.2.4",
+    "@mantine/notifications": "^5.2.4",
     "@next-auth/mongodb-adapter": "^1.0.4",
     "bootstrap": "^5.2.0",
     "date-fns": "^2.29.2",
